# rs-web

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
infrastructure/: Cargo.toml
infrastructure/src/sample_sql/repository/: sample_user_sql.rs
src/: main.rs
src/infrastructure/: mod.rs
src/infrastructure/sample_sql/entity/: mod.rs
src/infrastructure/sample_sql/repository/: mod.rs  sample_user_sql.rs
src/interfaces/: common_i.rs  mod.rs  product_i.rs
src/modules/sample/: mod.rs  sample_ctrl.rs  sample_m.rs  sample_r.rs  samplle.ts  test1.rs
src/system/: access_sys.rs  base_ctrl.rs  base_model.rs  base_sql.rs  config_sys.rs  ctx_data_sys.rs  ctx_sys.rs  db_connect_sys.rs  error_s.rs  macros_s.rs  mod.rs  sys_data.rs
system/: Cargo.toml
system/src/: access_sys.rs  config_sys.rs  ctx_data_sys.rs  ctx_sys.rs  error_s.rs  lib.rs  macros_proc.rs  macros_s.rs  mongo_connect_sys.rs
